add shrio & mybatis

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,18 +31,26 @@
 <script type="text/javascript">
     function login() {
         $('#loginform').form('submit', {
-            url: '/login/sign',
-            onSubmit: function(){
-                return $(this).form('validate');
-            },
-            success: function(result){
-                result = eval('(' + result + ')');
-                if (result.successful) {
-                    window.location.href="#";
-                } else {
-                    $.messager.show({title: '操作结果',msg: result.msg});
-                }
+            url:"login/sign",
+            onSubmit: function(param){
+                //param.username = "aaa";
             }
+            /*success: function (data) {  //表单提交成功后的回调函数，里面参数data是我们调用/BasicClass/ModifyClassInfo方法的返回值。
+                if (data > 0) {
+                    $.messager.show({
+                        title: '提示消息',
+                        msg: '提交成功',
+                        showType: 'show',
+                        timeout: 1000,
+                        style: {
+                            right: '',
+                            bottom: ''
+                        }
+                    });
+                }else {
+                    $.messager.alert('提示信息', '提交失败，请联系管理员！', 'warning');
+                }
+            }*/
         });
     }
 </script>
